k8s/k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: default
  labels:
    app: testp
spec:  
  replicas: 1 # 启动1个pod实列
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      imagePullSecrets:
      - name: tencent-docker-secret
      restartPolicy: Always # 总是重启pod
      containers:
        - name: test
          image: ccr.ccs.tencentyun.com/zflzqy/test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            limits:
              cpu: 0.5
              memory: 200Mi
            requests:
              memory: 100Mi
              cpu: 0.25
          volumeMounts:
          - mountPath: /config  #容器内部目录
            name: config          #与下边的名字一致
          - mountPath: /logs  #容器内部目录
            name: log          #与下边的名字一致
      volumes:
      - name: config             #卷名称
        nfs:                        #使用NFS网络存储卷
          server: 10.0.4.11    #NFS服务器地址
          path: /opt/project/nfs/test/config         #NFS服务器共享的目录
          readOnly: true          #是否为只读
      - name: log             #卷名称
        nfs:                        #使用NFS网络存储卷
          server: 10.0.4.11    #NFS服务器地址
          path: /opt/project/nfs/test/logs         #NFS服务器共享的目录
          readOnly: false          #是否为只读
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - test.zflzqy.cn
      secretName: test-zflzqy-cn-tls
  rules:
  - host: test.zflzqy.cn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test-service
            port:
              number: 8080
